<resources>
    <string name="app_name">FollowL</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="copiar">copiar</string>
    <string name="eliminar">eliminar</string>
    <string name="compartir">compartir</string>
    <string name="cortar">cortar</string>
    <string name="btn">Pulsa</string>
    <string name="selecciona_una_opcion">Selecciona Lesson:</string>
    <string name="crear">Crear BD y tabla</string>
    <string name="insertar">Insertar curso</string>
    <string name="borrar">Borrar curso</string>
    <string name="buscar">Buscar curso</string>
    <string name="titulo">Manager BD</string>
    <string name="editar">Editar curso</string>
    <string name="salir">Salir menu principal</string>
    <string name="git">Git</string>
    <string name="fav">Favoritos</string>
    <string name="perfil">Perfiles</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
</resources>
