<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <!--La action Bar, la podemos definir como el menú, las distintas entradas
   del actionBar son Acciones normalmente se especifican en el xml pero tambien se
   puede con código -->

    <!-- El atributo orderInCategory de 1 valor entero indica el orden de cada item,
     cuanto mas pequeño es el valor, mas a la izquierda sale.
     -showAsAction es el aributo que nos permite configurar la accion, podemos decir donde
     queremos esta accion si con icono en la actionBar o con tetxo en el overflow como entrada
     Tiene distintos valores: always, never, withText, ifRoom es el mas común, se muestra en
     la actionBar si se puede(normalmenete en horizontal caben ctrl+f11 en avd) -->
    <item
        android:id="@+id/menu_buscar"
        android:title="@string/buscar"
        android:icon="@drawable/abc_ic_go_search_api_mtrl_alpha"
        android:orderInCategory="30"
        app:showAsAction="ifRoom|withText"/>
    <item
    android:id="@+id/menu_profile"
    android:title="@string/perfil"
    android:icon="@drawable/ic_action_user"
    android:orderInCategory="60"
    app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_git"
        android:title="@string/git"
        android:icon="@drawable/ic_action_git"
        android:orderInCategory="40"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_favoritos"
        android:title="@string/fav"
        android:icon="@drawable/ic_action_star"
        android:orderInCategory="50"
        app:showAsAction="ifRoom|withText"/>
    <item
    android:id="@+id/menu_compartir"
    android:title="@string/compartir"
    android:icon="@drawable/ic_action_share"
    android:orderInCategory="70"
    app:showAsAction="ifRoom|withText"/>




    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>